#283: Implement code fixes recommended by static analysis tools such as SonarQube